@@ -39,6 +39,8 @@ ESExpResult *func_close(ESExp *f, int argc, ESExpResult **argv, Context *c);
 
 ESExpResult *func_pin(ESExp *f, int argc, ESExpResult **argv, Context *c);
 ESExpResult *func_unpin(ESExp *f, int argc, ESExpResult **argv, Context *c);
+ESExpResult *func_stick(ESExp *f, int argc, ESExpResult **argv, Context *c);
+ESExpResult *func_unstick(ESExp *f, int argc, ESExpResult **argv, Context *c);
 ESExpResult *func_set_workspace(ESExp *f, int argc, ESExpResult **argv, Context *c);
 
 ESExpResult *func_skip_tasklist(ESExp *f, int argc, ESExpResult **argv, Context *c);
